#136 fix word wrapping font size and block size in info pages and footer

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -46,7 +46,7 @@ body {
 #related .doc {
   display: inline-block;
   vertical-align: top;
-  width: 280px;
+  width: 275px;
   height: 145px;
   margin: 10px;
   padding: 15px;
